# llm-reginald

./: pyproject.toml
llm_reginald/: llm_reginald.py
